<resources>
    <string name="app_name">Covid19Tracker</string>
    <string name="logo">logo</string>
    <string name="statistics_vaccine_tracker">Statistics|Vaccine Tracker</string>
    <string name="confirmed">Confirmed</string>
    <string name="active">Active        </string>
    <string name="deceased">Deceased</string>
    <string name="recovered">Recovered</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="covid_19_tracker">Covid-19 Tracker</string>
    <string name="search_by_pincode">Search By PinCode</string>
    <string name="last_updated">Last Updated</string>
    <string name="covid_19">COVID-19</string>
</resources>