<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeToRefresh"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <RelativeLayout
            android:id="@+id/topcover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/card_shape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/statistics_vaccine_tracker"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lastUpdatedTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/rounded_border"
                android:backgroundTint="#0b302c"
                android:padding="3dp"
                android:text="Last Updated"
                android:textAlignment="viewEnd"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif"
                android:text="COVID-19 "
                android:textAllCaps="true"
                android:textColor="@android:color/holo_red_light"
                android:textSize="19sp"
                android:textStyle="bold" />
            <!--            <ImageView&ndash;&gt;-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:src="@drawable/ic_indian"-->
            <!--                android:layout_marginTop="43dp"-->
            <!--                android:layout_marginLeft="90dp" />-->
            <LinearLayout
                android:id="@+id/topContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_border"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmed"
                        android:textAllCaps="true"
                        android:textColor="@color/confirmed"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="4dp"
                        android:backgroundTint="@color/confirmed"
                        android:src="@drawable/virus" />
                    <!--                        android:src="@drawable/ic_corona_virus"-->


                    <TextView
                        android:id="@+id/confirmedTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAllCaps="true"

                        android:textColor="@color/confirmed"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_border"
                    android:gravity="center"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/active"
                        android:textAllCaps="true"
                        android:textColor="@color/active"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/patient"
                        app:tint="@color/active" />

                    <TextView
                        android:id="@+id/activeTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAllCaps="true"
                        android:textColor="@color/active"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/topContainer"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_border"
                    android:gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:textAllCaps="true"
                        android:textColor="@color/recovered"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/heart"
                        app:tint="@color/recovered" />

                    <TextView
                        android:id="@+id/recoveredTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAllCaps="true"
                        android:textColor="@color/recovered"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_border"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deceased"
                        android:textAllCaps="true"
                        android:textColor="@color/deceased"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/death"
                        app:tint="@color/deceased" />

                    <TextView
                        android:id="@+id/deceasedTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAllCaps="true"
                        android:textColor="@color/deceased"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="358dp"
            android:layout_below="@+id/topcover"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:listheader="@layout/list_header"
            tools:listitem="@layout/list_item" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout

            android:layout_width="399dp"
            android:layout_height="355dp"
            android:layout_alignParentBottom="true">

            <!-- Main content -->

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/Tracker_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                android:backgroundTint="#75292f"
                android:elevation="30dp"
                android:textAllCaps="false"
                app:icon="@drawable/virus"
                app:rippleColor="@color/recovered" />


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/Essentials_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="80dp"
                android:backgroundTint="@color/fab_extras"
                android:elevation="30dp"
                android:text="Crucial"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:iconTint="@color/recovered"
                app:rippleColor="@color/recovered" />
            <!--                app:icon="@drawable/ic_essentials"-->

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/Prevention_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="134dp"
                android:backgroundTint="@color/fab_extras"
                android:elevation="30dp"
                android:text="Prevention"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:iconTint="@color/recovered"
                app:rippleColor="@color/recovered" />
            <!--            app:icon="@drawable/ic_prevention"-->

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/Symptoms_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="188dp"
                android:backgroundTint="@color/fab_extras"

                android:elevation="30dp"
                android:text="Symptoms"

                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:visibility="invisible"
                app:iconTint="@color/recovered"


                app:rippleColor="@color/recovered" />
            <!--            app:icon="@drawable/ic_symptoms"-->

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/About_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="242dp"

                android:backgroundTint="@color/fab_extras"
                android:elevation="30dp"
                android:text="Covid-19"

                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:icon="@drawable/virus"
                app:iconTint="@color/recovered"
                app:rippleColor="@color/recovered" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/Vaccine_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="299dp"

                android:backgroundTint="@color/fab_extras"
                android:elevation="30dp"
                android:text="Vaccine Slots"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:icon="@drawable/virus"
                app:iconTint="@color/recovered"
                app:rippleColor="@color/recovered" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>